force-app/src/objects/TR1__Closing_Report__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Travel_Bill_Rate__c</fullName>
        <label>Travel Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Travel_Pay_Rate__c</fullName>
        <label>Travel Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Week_Ending__c</fullName>
        <label>Week Ending</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Week_Start__c</fullName>
        <description>Acc:Created For TS Generation Logic based on Weekending.</description>
        <formula>CASE(TR1__Week_Ending__c, 
&quot;Sunday&quot;,&quot;Monday&quot;, 
&quot;Monday&quot;,&quot;Tuesday&quot;, 
&quot;Tuesday&quot;,&quot;Wednesday&quot;, 
&quot;Wednesday&quot;,&quot;Thursday&quot;, 
&quot;Thursday&quot;,&quot;Friday&quot;, 
&quot;Friday&quot;,&quot;Saturday&quot;, 
&quot;Saturday&quot;,&quot;Sunday&quot;, 
&quot;Monday&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Weekly_Salary__c</fullName>
        <label>Weekly Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Work_Location__c</fullName>
        <label>Work Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>City of San Francisco</fullName>
                </value>
                <value>
                    <fullName>City of Seattle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Worker_Comp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Worker Comp</label>
        <referenceTo>TR1__Worker_Comp__c</referenceTo>
        <relationshipLabel>Closing Reports</relationshipLabel>
        <relationshipName>Closing_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Closing Report</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>TR1__Person_Placed__c</columns>
        <columns>TR1__Job__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>TR1__Start_Date__c</columns>
        <columns>TR1__End_Date__c</columns>
        <columns>TR1__Assignment_Ended__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR1__Assignments_Ending_in_30_Days</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>TR1__Person_Placed__c</columns>
        <columns>TR1__Job__c</columns>
        <columns>NAME</columns>
        <columns>TR1__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__End_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <label>My Assignments Ending in 30 Days</label>
    </listViews>
    <listViews>
        <fullName>TR1__My_Active_Assignments</fullName>
        <columns>TR1__Person_Placed__c</columns>
        <columns>TR1__Job__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>My Active Assignments</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{MM}{DD}{YYYY}-{0}</displayFormat>
        <label>Closing Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closing Reports</pluralLabel>
    <recordTypes>
        <fullName>Accreditation</fullName>
        <active>true</active>
        <label>Accreditation</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Consulting</fullName>
        <active>true</active>
        <description>Consulting Close.</description>
        <label>Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Conversion</fullName>
        <active>true</active>
        <description>Consulting to Permanent Close.</description>
        <label>Conversion</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Fixed_Term_Booking</fullName>
        <active>true</active>
        <description>Fixed Term Booking.</description>
        <label>Fixed Term Booking</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Permanent</fullName>
        <active>true</active>
        <description>Permanent Close.</description>
        <label>Permanent</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Retained</fullName>
        <active>true</active>
        <description>Retained Close.</description>
        <label>Retained</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Retained_Invoice</fullName>
        <active>true</active>
        <description>Only used to create an invoice for retained job orders.</description>
        <label>Retained_Invoice</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TR1__Bill_rate_lower_than_pay_rate</fullName>
        <active>true</active>
        <description>Bill rate cannot be lower than pay rate.</description>
        <errorConditionFormula>TR1__Pay_Rate__c &gt;  TR1__Bill_Rate__c</errorConditionFormula>
        <errorDisplayField>TR1__Bill_Rate__c</errorDisplayField>
        <errorMessage>Bill rate cannot be lower than pay rate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_adminfeepct_change</fullName>
        <active>false</active>
        <description>Not permitted to change admin fee % once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(    TR1__Administrative_Fee_Percentage__c  ),
NOT(ISBLANK( PRIORVALUE( TR1__Job_Credit__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Administrative_Fee_Percentage__c</errorDisplayField>
        <errorMessage>Not permitted to change rate on closing report.  To modify rate please click rate change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_billrate_change</fullName>
        <active>false</active>
        <description>Not permitted to change bill rate once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(   TR1__Bill_Rate__c  ),
NOT(ISBLANK( PRIORVALUE( TR1__Job_Credit__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Bill_Rate__c</errorDisplayField>
        <errorMessage>Not permitted to change rate on closing report.  To modify rate please click rate change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_candcredit_change</fullName>
        <active>false</active>
        <description>Not permitted to change once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(   TR1__Candidate_Credit__c  ),
NOT(ISBLANK( PRIORVALUE(  TR1__Account__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Candidate_Credit__c</errorDisplayField>
        <errorMessage>Not permitted to change user credit on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_candidatepct_change</fullName>
        <active>false</active>
        <description>Not permitted to change once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(  TR1__Candidate_Percentage__c ),
NOT(ISBLANK( PRIORVALUE( TR1__Job_Credit__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Candidate_Percentage__c</errorDisplayField>
        <errorMessage>Not permitted to change rate on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_dtbillratemult_change</fullName>
        <active>true</active>
        <description>Not permitted to change admin fee % once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(    TR1__DT_Bill_Rate_Multiplier_Percentage__c    ),
NOT(ISBLANK( PRIORVALUE( TR1__Job_Credit__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__DT_Bill_Rate_Multiplier_Percentage__c</errorDisplayField>
        <errorMessage>Not permitted to change rate on closing report.  To modify rate please click rate change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_jobcredit_change</fullName>
        <active>false</active>
        <description>Not permitted to change once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(   TR1__Job_Credit__c  ),
NOT(ISBLANK( PRIORVALUE(  TR1__Account__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Job_Credit__c</errorDisplayField>
        <errorMessage>Not permitted to change user credit on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_jobpct_change</fullName>
        <active>false</active>
        <description>Not permitted to change admin fee % once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(   TR1__Job_Percentage__c  ),
NOT(ISBLANK( PRIORVALUE( TR1__Job_Credit__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Job_Percentage__c</errorDisplayField>
        <errorMessage>Not permitted to change rate on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_marketpct_change</fullName>
        <active>false</active>
        <description>Not permitted to change once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(   TR1__Marketing_Percentage__c  ),
NOT(ISBLANK( PRIORVALUE( TR1__Job_Credit__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Marketing_Percentage__c</errorDisplayField>
        <errorMessage>Not permitted to change rate on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_mktcredit_change</fullName>
        <active>false</active>
        <description>Not permitted to change once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(    TR1__Marketing_Credit__c  ),
NOT(ISBLANK( PRIORVALUE(  TR1__Account__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Marketing_Credit__c</errorDisplayField>
        <errorMessage>Not permitted to change user credit on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_otbillratemult_change</fullName>
        <active>true</active>
        <description>Not permitted to change admin fee % once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(    TR1__OT_Bill_Rate_Multiplier_Percentage__c   ),
NOT(ISBLANK( PRIORVALUE( TR1__Job_Credit__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__OT_Bill_Rate_Multiplier_Percentage__c</errorDisplayField>
        <errorMessage>Not permitted to change rate on closing report.  To modify rate please click rate change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_other2credit_change</fullName>
        <active>true</active>
        <description>Not permitted to change once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(   TR1__Other2_Credit__c  ),
NOT(ISBLANK( PRIORVALUE(  TR1__Account__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Other2_Credit__c</errorDisplayField>
        <errorMessage>Not permitted to change user credit on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_other2pct_change</fullName>
        <active>true</active>
        <description>Not permitted to change once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(   TR1__Other2_Percentage__c   ),
NOT(ISBLANK( PRIORVALUE( TR1__Job_Credit__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Other2_Percentage__c</errorDisplayField>
        <errorMessage>Not permitted to change rate on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_othercredit_change</fullName>
        <active>true</active>
        <description>Not permitted to change once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(   TR1__Other_Credit__c  ),
NOT(ISBLANK( PRIORVALUE(  TR1__Account__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Other_Credit__c</errorDisplayField>
        <errorMessage>Not permitted to change user credit on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_otherpct_change</fullName>
        <active>true</active>
        <description>Not permitted to change once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(    TR1__Other_Percentage__c  ),
NOT(ISBLANK( PRIORVALUE( TR1__Job_Credit__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Other_Percentage__c</errorDisplayField>
        <errorMessage>Not permitted to change rate on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_payrate_change</fullName>
        <active>false</active>
        <description>Not permitted to change pay rate once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(   TR1__Pay_Rate__c   ),
NOT(ISBLANK( PRIORVALUE( TR1__Job_Credit__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Pay_Rate__c</errorDisplayField>
        <errorMessage>Not permitted to change rate on closing report.  To modify rate please click rate change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Prevent_person_placed_change</fullName>
        <active>true</active>
        <description>Not permitted to change once closing report has been saved, except system admin.</description>
        <errorConditionFormula>AND(
ISCHANGED(   TR1__Person_Placed__c   ),
NOT(ISBLANK( PRIORVALUE(  TR1__Account__c  ))),
NOT(ISNEW()),
$UserRole.Name &lt;&gt; &quot;Corporate&quot;)</errorConditionFormula>
        <errorDisplayField>TR1__Person_Placed__c</errorDisplayField>
        <errorMessage>Not permitted to change person placed on closing report.  To modify please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Start_Date_Not_Greater_Than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>TR1__Start_Date__c &gt;  TR1__End_Date__c</errorConditionFormula>
        <errorMessage>End Date should not be less than Start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Total_Percentage_Must_Equal_100</fullName>
        <active>false</active>
        <errorConditionFormula>TR1__Total_Percentage__c  &lt;&gt; 1.00</errorConditionFormula>
        <errorMessage>Total Percentage for profit splits must equal 100%.</errorMessage>
    </validationRules>
</CustomObject>